--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <option value="youngestFriend">Find Youngest Friend</option>
                 <option value="oldestFriend">Find Oldest Friend</option>
             </select>
+            <button onclick="resetPage()">Reset</button>
         </div>
 
         <div id="results"></div>
     </div>
+    
 
     
 
